--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,9 @@
     margin: 0 auto;
     
   }
+  .logo:hover {
+    color: #098b71;
+  }
   .header-ul {
     padding-top: 3%;
     
@@ -134,7 +137,7 @@
     font-family: 'M PLUS 1', sans-serif;
     text-decoration: none;
     color: black;
-    font-size: 90%;
+    font-size: 4vw;
   
 }
 
@@ -145,3 +148,136 @@
 
 
 
+.footerI {
+  clear: both;
+  position: relative;
+  height: 200px;
+  margin-top: -200px;
+}
+.footer-basic {
+  padding:40px 0;
+  background-color:black;
+  color:#4b4c4d;
+}
+.footer-basic {
+  border-top: 3px solid #05C19C;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+ 
+}
+
+.instagram {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  /* border:1px solid violet; */
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  margin:0 8px;
+  color:inherit;
+  
+  
+}
+.spoty-footer {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+ 
+  background-color: #18ae4e;
+  margin:0 8px;
+  color:inherit;
+ 
+
+}
+.tiktok{
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  /* border:1px solid white; */
+  margin:0 8px;
+  color:inherit;
+ 
+}
+.youtube-footer {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid red;
+  background-color: red;
+  margin:0 8px;
+  color:inherit;
+ 
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  /* margin-top:15px; */
+  text-align:center;
+  font-size:13px;
+  color:#aaa;
+  margin-bottom: 0;
+}
+.ul {
+    text-align: left;
+}
+.link {
+  color: red;
+  text-decoration: none;
+}
+
+.ultimo-cont {
+
+  text-align: center;
+  background-color: black;
+  margin-bottom: 0;
+}
+.ultimo-cont p {
+  font-family:  'M PLUS 1', sans-serif;
+  color: #05C19C;
+  opacity: 0.50;
+  padding-bottom: 5px;
+}
