--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .btn-header {
     font-size: x-large;
     text-decoration: none;
@@ -73,7 +77,10 @@
     border-radius: 6px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
-
+h6 {
+  font-family:'M PLUS 1', sans-serif;
+  
+}
   .escuchala-container {
     width: 100%;
     margin: 0 auto;
@@ -81,6 +88,7 @@
    grid-template-columns: repeat(3, 30%);
    grid-gap: 4%;
    margin: 1%;
+   margin-top: 3vh;
 }
 
 
@@ -137,12 +145,15 @@
     font-family: 'M PLUS 1', sans-serif;
     text-decoration: none;
     color: black;
-    font-size: 4vw;
-  
+    font-size: 4.5vw;
+    font-weight: 500;
+}
+.descargar-container a i {
+  font-size:4.5vw;
 }
 
 .verMas {
-    /* text-decoration: none; */
+   
     color: #05C19C;
 }
 
