--- a/css/canciones.css
+++ b/css/canciones.css
@@ -15,7 +15,9 @@ h6 {
 .hr {
   color: #05C19C;
 }
-
+.desktop {
+  display: none;
+}
 .btn-header {
     font-size: x-large;
     text-decoration: none;
@@ -74,7 +76,11 @@ h6 {
     /* border: 1px solid black; */
     margin: 0 2%;
   }
-
+.cancion-mobile {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 20px 10px;
+  border-radius: 10px;
+}
   .container-img-estreno {
     width: 100%;
     height: 100%;
@@ -292,3 +298,181 @@ font-size:4.5vw;
     opacity: 0.50;
     padding-bottom: 5px;
   }
+
+
+
+  /* Portatil */
+ @media (min-width: 1000px) { 
+  .mobile {
+    display: none;
+  }
+  .tituloTab {
+    display: inline;
+  }
+  .desktop {
+    display: block;
+  }
+  .logo {
+    margin-left: 3vw;
+    padding-left: 0;
+  }
+ 
+  .ul-nav a {
+    padding-left: 2vw;
+  }
+  .contacto {
+    margin-right: 2vw;
+  }
+  .header-li-a {
+    font-family: 'M PLUS 2', sans-serif;
+  }
+  .main-container {
+    margin: 0 3vw;
+  }
+  .container-header {
+    padding-left: 0;
+  }
+  h1 {
+    font-family: 'M PLUS 2', sans-serif;
+    font-weight: bolder;
+    text-align: left;
+    text-decoration: underline;
+    text-decoration-thickness: 2.5px;
+    
+    text-decoration-color: #05C19C;
+  }
+  .titulo-cancion {
+    font-family: 'M PLUS 2', sans-serif;
+    font-weight: 800;
+  }
+  .cancion {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns:repeat(3, 33.3%);
+    margin: 0;
+    height: 400px;
+    margin-bottom: 50px;
+  }
+  .izq {
+      grid-column: 1/2;
+  }
+  .iframe {
+    grid-column: 2 / 4;
+    width: 100%;
+    border-radius: 10px;
+    margin: 0;
+  }
+  iframe {
+    border-radius: 10px;
+  }
+   .cancion-info {
+     margin: 1vw;
+   }
+   .cancion-publicacion {
+     color: #05C19C;
+     font-family: 'M PLUS 2', sans-serif;
+     font-weight: 600;
+   }
+
+   h5 {
+    font-family: 'M PLUS 2', sans-serif;
+    font-weight: 600;
+     margin: 0 1vw;
+     text-align: center;
+   }
+   .container-streaming {
+     padding: 1.5vw;
+   }
+   .escuchala-container {
+     margin-top: 0;
+   }
+
+.spotify-container {
+    width: 100%;
+    background-color: black;
+    /* padding: 1%; */
+    border-radius: 10px;
+    display: inline-block;
+    /* height: 40px; */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    opacity: 95%;
+    transition: 0.3s;
+   
+}
+.spotify-container:hover {
+ opacity: 100%;
+ cursor: pointer;
+}
+.spotify-container a img {
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+}
+.youtube-container {
+    width: 100%;
+    background-color: red;
+    /* padding: 1%; */
+    border-radius: 10px;
+    display: inline-block;
+    /* height: 40px; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    opacity: 70%;
+    transition: 0.3s;
+}
+.youtube-container:hover {
+opacity: 100%;
+cursor: pointer;
+}
+
+.youtube-container a img {
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+}
+
+.descargar-container {
+    width: 100%;
+    background-color: #05C19C;
+    padding: 1%;
+    border-radius: 10px;
+    display: inline-block;
+    /* height: 40px; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.3s;
+}
+.descargar-container:hover {
+  background-color: #098b71;
+  cursor: pointer;
+}
+
+.centrar {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.descargar-container a {
+    font-family: 'M PLUS 1', sans-serif;
+    text-decoration: none;
+    color: black;
+    font-size: 1.2vw;
+    font-weight: 500;
+    opacity: 90%;
+}
+.descargar-container a i {
+  font-size: 2vw;
+}
+
+.descargar-container a:hover {
+  opacity: 100%;
+  color: black;
+}
+.escuchalaPadre {
+  width: 40%;
+  margin: 0 auto;
+}
+
+ }
