--- a/css/index.css
+++ b/css/index.css
@@ -321,6 +321,9 @@ h6 {
     .mobile {
       display: none;
     }
+    .tituloTab {
+      display: inline;
+    }
     .desktop {
       display: block;
     }
@@ -369,6 +372,13 @@ h6 {
       display: inline-block;
       /* height: 40px; */
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+      opacity: 95%;
+      transition: 0.3s;
+     
+  }
+  .spotify-container:hover {
+   opacity: 100%;
+   cursor: pointer;
   }
   .spotify-container a img {
       width: 100%;
@@ -383,6 +393,12 @@ h6 {
       display: inline-block;
       /* height: 40px; */
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      opacity: 70%;
+      transition: 0.3s;
+  }
+  .youtube-container:hover {
+  opacity: 100%;
+  cursor: pointer;
   }
   
   .youtube-container a img {
@@ -399,7 +415,11 @@ h6 {
       display: inline-block;
       /* height: 40px; */
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  
+      transition: 0.3s;
+  }
+  .descargar-container:hover {
+    background-color: #098b71;
+    cursor: pointer;
   }
   
   .centrar {
@@ -414,18 +434,24 @@ h6 {
       font-family: 'M PLUS 1', sans-serif;
       text-decoration: none;
       color: black;
-      font-size: 2.5vw;
+      font-size: 1.7vw;
       font-weight: 500;
+      opacity: 90%;
   }
   .descargar-container a i {
     font-size: 2vw;
   }
+
+  .descargar-container a:hover {
+    opacity: 100%;
+    color: black;
+  }
   .escuchalaPadre {
-    width: 50%;
+    width: 40%;
     margin: 0 auto;
   }
   .verMas {
-     font-size: 2.5vw;
+     font-size: 1.7vw;
      margin-left: 3.5vw;
       color: #05C19C;
       text-align: left;
