--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ html {
 
   .container-img-estreno {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
   }
 
   .img-estreno {
@@ -292,7 +292,9 @@ h6 {
   opacity: 0.50;
   padding-bottom: 5px;
 }
-
+.fab {
+  line-height: inherit;
+}
 /* Tablet */
 @media (min-width: 700px) { 
   
@@ -456,4 +458,5 @@ h6 {
       color: #05C19C;
       text-align: left;
   }
+  
    }
